# podcast2md

./: README.md  pyproject.toml
.github/workflows/: linter.yml
src/podcast2md/: __init__.py
