[project]
name = "podcast2md"
version = "0.0.2"
description = "Transcribe a podcast to Markdown"
readme = "README.md"
authors = [
    { name = "Peter Reuterås", email = "peter@reuteras.net" }
]
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47.0",
    "openai-whisper>=20240930",
    "pydub>=0.25.1",
]

[project.scripts]
podcast2md = "podcast2md:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
