[project]
name = "podcast2md"
version = "0.0.3"
description = "Transcribe a podcast to Markdown"
readme = "README.md"
authors = [
    { name = "Peter Reuterås", email = "peter@reuteras.net" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "faster-whisper>=1.1.1",
    "mutagen>=1.48.0",
    "requests>=2.32.0",
]

[project.scripts]
podcast2md = "podcast2md:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
